--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-react-typescript-starter",
-  "private": true,
+  "name": "anapa360",
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
