--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
     "@types/react-slick": "^0.23.13",
     "@use-gesture/react": "^10.3.1",
     "apollo": "^2.34.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.0",
     "date-fns": "^3.2.0",
     "deep-object-diff": "^1.1.9",
     "dotenv": "^16.4.5",
     "gh-pages": "^6.0.0",
+    "jsqr": "^1.4.0",
     "leaflet": "1.8.0",
     "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
+    "next": "^14.2.2",
+    "next-router": "^1.3.6",
+    "node-html-parser": "^6.1.13",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
