--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.5",
+    "@blueprintjs/core": "^5.10.2",
+    "@blueprintjs/datetime": "^5.3.4",
     "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
     "@fontsource/roboto": "^5.0.8",
     "@graphql-codegen/cli": "^5.0.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.15.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
@@ -37,7 +42,7 @@
     "apollo": "^2.34.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.0",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.6.0",
     "deep-object-diff": "^1.1.9",
     "dotenv": "^16.4.5",
     "gh-pages": "^6.0.0",
@@ -49,7 +54,9 @@
     "next-router": "^1.3.6",
     "node-html-parser": "^6.1.13",
     "react": "18.2.0",
+    "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-leaflet": "4.0.1",
@@ -74,6 +81,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.6",
     "@types/react": "^18.2.18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
