--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "dotenv": "^16.4.5",
     "gh-pages": "^6.0.0",
     "jsqr": "^1.4.0",
-    "leaflet": "1.8.0",
+    "leaflet": "^1.8.0",
     "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
     "next": "^14.2.2",
@@ -59,7 +59,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-leaflet": "4.0.1",
+    "react-leaflet": "^4.0.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-mui-color": "^1.0.1",
