--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "apollo": "^2.34.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.2.0",
     "deep-object-diff": "^1.1.9",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "gh-pages": "^6.0.0",
     "jsqr": "^1.4.0",
     "leaflet": "1.8.0",
@@ -52,6 +54,7 @@
     "leaflet.markercluster": "^1.5.3",
     "next": "^14.2.2",
     "next-router": "^1.3.6",
+    "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.13",
     "react": "18.2.0",
     "react-calendar": "^4.8.0",
